# ffs

./: .gitignore  Cargo.toml  flake.nix
migrations/2022-06-19-122932_create_points/: up.sql
migrations/2022-06-19-123244_create_tags/: up.sql
migrations/2022-06-19-123405_create_joins/: down.sql  up.sql
migrations/2022-06-20-223156_add_type_to_points/: down.sql  up.sql
src/: autotagger.rs  ffs.rs  main.rs  models.rs  schema.rs  utils.rs
